# bash-shell.net

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .watchmanconfig  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  Pipfile  Procfile  README.md  build-image.sh  codeship-services.yml  codeship-steps.yml  develop.bat  docker-compose.yml  docker-dev.bat  docker-dev.sh  dockercfg.encrypted  manage.py  package-lock.json  package.json  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  wait-for-it.sh  webpack.config.js
app/: .coveragerc  Makefile  Procfile  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  webpack.config.js
app/bash_shell_net/accounts/: admin.py  apps.py  factories.py  managers.py  models.py
app/bash_shell_net/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py
app/bash_shell_net/base/: apps.py  mixins.py  models.py  test_runner.py  test_utils.py
app/bash_shell_net/base/migrations/: 0001_initial.py  0002_auto_20190213_0218.py  0003_auto_20190606_0126.py  0004_auto_20200510_1459.py  0005_auto_20200510_1504.py  0006_alter_standardpage_body.py  0007_alter_standardpage_body.py  0008_case_insensitive_collation.py
app/bash_shell_net/base/tests/: test_sitemap.py
app/bash_shell_net/blog/: admin.py  apps.py  factories.py  feeds.py  models.py
app/bash_shell_net/blog/fixtures/: test_pages.json
app/bash_shell_net/blog/migrations/: 0001_initial.py  (+9 more)
app/bash_shell_net/on_tap/: apps.py  factories.py  forms.py  models.py
app/bash_shell_net/projects/: admin.py  apps.py  factories.py  models.py  tests.py  urls.py  views.py
app/bash_shell_net/wagtail_blocks/: blocks.py  fields.py  tests.py
app/config/: sitemaps.py  storages.py  urls.py  wsgi.py
app/config/settings/: base.py  local.py  production.py  test.py
app/config/templates/: about.html  base.html  open_source.html
app/frontend/: eslint.config.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
app/frontend/templates/: 404.html  about.html  base.html  open_source.html
app/treebeard/: mp_tree.pyi  ns_tree.pyi
(+211 files in other folders)
